@@ -5,7 +5,7 @@
  * For commercial licenses see https://www.tiny.cloud/
  */
 
-import { Arr, Obj } from '@ephox/katamari';
+import { Arr, Obj, Type } from '@ephox/katamari';
 import Editor from 'tinymce/core/api/Editor';
 import {
   AllowedFormat, BlockStyleFormat, FormatReference, InlineStyleFormat, NestedFormatting, SelectorStyleFormat, Separator, StyleFormat
@@ -81,7 +81,7 @@ const mapFormats = (userFormats: AllowedFormat[]): CustomFormatMapping => Arr.fo
     };
   } else if (isInlineFormat(fmt) || isBlockFormat(fmt) || isSelectorFormat(fmt)) {
     // Convert the format to a reference and add the original to the custom formats to be registered
-    const formatName = `custom-${fmt.title.toLowerCase()}`;
+    const formatName = Type.isString(fmt.name) ? fmt.name : `custom-${fmt.title.toLowerCase()}`;
     return {
       customFormats: acc.customFormats.concat([{ name: formatName, format: fmt }]),
       formats: acc.formats.concat([{ title: fmt.title, format: formatName, icon: fmt.icon }])
