@@ -5,7 +5,7 @@
  * For commercial licenses see https://www.tiny.cloud/
  */
 
-import { Arr, Id, Merger, Obj, Optional } from '@ephox/katamari';
+import { Arr, Id, Merger, Obj, Optional, Type } from '@ephox/katamari';
 import Editor from 'tinymce/core/api/Editor';
 import { StyleFormat } from 'tinymce/core/api/fmt/StyleFormat';
 import { FormatItem, FormatterFormatItem, PreviewSpec, SubMenuFormatItem } from '../BespokeSelect';
@@ -39,7 +39,7 @@ const register = (editor: Editor, formats, isSelectedFor: IsSelectedForType, get
   };
 
   const enrichCustom = (item: StyleFormat): FormatterFormatItem => {
-    const formatName = Id.generate(item.title);
+    const formatName = Type.isString(item.name) ? item.name : Id.generate(item.title);
     const customSpec = {
       type: 'formatter' as 'formatter',
       format: formatName,
